force-app/main/default/objects/Financial_Assessment__c/Financial_Assessment__c.object-meta.xml
<CustomObject>
    <label>Financial Assessment</label>
    <nameField>
        <displayFormat>FA-{0000000}</displayFormat>
        <label>financial assessment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Assessment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>