force-app/main/default/objects/Financial_Assessment__c/fields/Add_Profit_for_the_year__c.field-meta.xml
<CustomField>
    <fullName>Add_Profit_for_the_year__c</fullName>
    <label>Add Profit for the year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>