force-app/main/default/objects/Financial_Assessment__c/fields/Assets_funded_in_last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Assets_funded_in_last_12_Months__c</fullName>
    <label>Assets funded in last 12 Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>