force-app/main/default/objects/Financial_Assessment__c/fields/Avg_Load_per_trip__c.field-meta.xml
<CustomField>
    <fullName>Avg_Load_per_trip__c</fullName>
    <label>Avg Load per trip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>