force-app/main/default/objects/Financial_Assessment__c/fields/Bank_ODCC__c.field-meta.xml
<CustomField>
    <fullName>Bank_ODCC__c</fullName>
    <label>Bank OD/CC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>