force-app/main/default/objects/Financial_Assessment__c/fields/BCF_EMI_Viability_CE__c.field-meta.xml
<CustomField>
    <fullName>BCF_EMI_Viability_CE__c</fullName>
    <formula>BCF_Viability_CE__c / EMI_Viability_CE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCF/ EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>