force-app/main/default/objects/Financial_Assessment__c/fields/BCF_Viability_CE__c.field-meta.xml
<CustomField>
    <fullName>BCF_Viability_CE__c</fullName>
    <formula>No_of_Machines__c *  Free_Cash_Flow_FCF_Viability_CE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>