force-app/main/default/objects/Financial_Assessment__c/fields/BCF_Viability_CV__c.field-meta.xml
<CustomField>
    <fullName>BCF_Viability_CV__c</fullName>
    <formula>Free_Cash_Flow_FCF_Viability_CV__c  *  No_of_vehicles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>