force-app/main/default/objects/Financial_Assessment__c/fields/Breakup_of_Secured_loans__c.field-meta.xml
<CustomField>
    <fullName>Breakup_of_Secured_loans__c</fullName>
    <label>Break-up of Secured loans</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>