force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Charge_per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Buy_Charge_per_Hour__c</fullName>
    <label>Charge per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>