force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Cost_of_1_tyre__c.field-meta.xml
<CustomField>
    <fullName>Buy_Cost_of_1_tyre__c</fullName>
    <label>Cost of 1 tyre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>