force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Distance_in_KM__c.field-meta.xml
<CustomField>
    <fullName>Buy_Distance_in_KM__c</fullName>
    <label>Distance in KM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>