force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Drivers_Salary__c.field-meta.xml
<CustomField>
    <fullName>Buy_Drivers_Salary__c</fullName>
    <label>Drivers Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>