force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Fuel_Avg_in_LtrHr__c.field-meta.xml
<CustomField>
    <fullName>Buy_Fuel_Avg_in_LtrHr__c</fullName>
    <label>Fuel Avg in Ltr/Hr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>