force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Fuel_cost_in_a_month__c.field-meta.xml
<CustomField>
    <fullName>Buy_Fuel_cost_in_a_month__c</fullName>
    <formula>( Buy_No_of_trips_per_month__c * Buy_Distance_in_KM__c )*( Buy_Cost_of_Fuel_per_litre__c / Buy_Fuel_Avg_in_LtrHr__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fuel cost in a month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>