force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Fuel_cost_in_a_month_CE__c.field-meta.xml
<CustomField>
    <fullName>Buy_Fuel_cost_in_a_month_CE__c</fullName>
    <formula>Buy_No_of_hr_opearted_in_a_day__c * Buy_Cost_of_Fuel_per_litre__c * Buy_Fuel_Avg_in_LtrHr__c * Buy_No_working_days_in_month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fuel cost in a month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>