force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Life_of_new_tyres_in_Km__c.field-meta.xml
<CustomField>
    <fullName>Buy_Life_of_new_tyres_in_Km__c</fullName>
    <label>Life of new tyres in Km</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>