force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Maintenance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Buy_Maintenance_Cost__c</fullName>
    <label>Maintenance Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>