force-app/main/default/objects/Financial_Assessment__c/fields/Buy_No_of_trips_per_month__c.field-meta.xml
<CustomField>
    <fullName>Buy_No_of_trips_per_month__c</fullName>
    <label>No of trips per month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>