force-app/main/default/objects/Financial_Assessment__c/fields/Buy_No_of_tyres__c.field-meta.xml
<CustomField>
    <fullName>Buy_No_of_tyres__c</fullName>
    <label>No. of tyres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>