force-app/main/default/objects/Financial_Assessment__c/fields/Buy_No_Of_working_Days__c.field-meta.xml
<CustomField>
    <fullName>Buy_No_Of_working_Days__c</fullName>
    <label>No Of working Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>