force-app/main/default/objects/Financial_Assessment__c/fields/Buy_No_of_working_Hours_per_day__c.field-meta.xml
<CustomField>
    <fullName>Buy_No_of_working_Hours_per_day__c</fullName>
    <label>No. of working Hours per day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>