force-app/main/default/objects/Financial_Assessment__c/fields/Buy_No_working_days_in_month__c.field-meta.xml
<CustomField>
    <fullName>Buy_No_working_days_in_month__c</fullName>
    <label>No. working days in month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>