force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Proposed_Emi__c.field-meta.xml
<CustomField>
    <fullName>Buy_Proposed_Emi__c</fullName>
    <label>Proposed Emi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>