force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Rate_per_ton_per_km__c.field-meta.xml
<CustomField>
    <fullName>Buy_Rate_per_ton_per_km__c</fullName>
    <label>Rate per ton per km</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>