force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Total_Buy_Cost_CE__c.field-meta.xml
<CustomField>
    <fullName>Buy_Total_Buy_Cost_CE__c</fullName>
    <formula>(Gross_Receipts_TurnoverSales__c + Other_Income_not_relevant_to_key_buss__c)
+
(Buy_No_of_hr_opearted_in_a_day__c * Buy_Cost_of_Fuel_per_litre__c * Buy_Fuel_Avg_in_LtrHr__c * Buy_No_working_days_in_month__c)
+
(Buy_Drivers_Salary__c + Buy_CleanerOperator_Salary__c + Buy_Taxes_Permit__c + Buy_Maintenance_Cost__c + Buy_Misc_Exps__c + Buy_Proposed_Emi__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buy Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>