force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Total_Expenses_CE__c.field-meta.xml
<CustomField>
    <fullName>Buy_Total_Expenses_CE__c</fullName>
    <formula>Buy_Drivers_Salary__c + Buy_CleanerOperator_Salary__c + Buy_Taxes_Permit__c + Buy_Maintenance_Cost__c + Buy_Misc_Exps__c + Buy_Proposed_Emi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>