force-app/main/default/objects/Financial_Assessment__c/fields/Buy_Tyres_Cost__c.field-meta.xml
<CustomField>
    <fullName>Buy_Tyres_Cost__c</fullName>
    <formula>ROUND((  Buy_No_of_trips_per_month__c *   Buy_Distance_in_KM__c *    Buy_Cost_of_1_tyre__c *    Buy_No_of_tyres__c )/   Buy_Life_of_new_tyres_in_Km__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>