force-app/main/default/objects/Financial_Assessment__c/fields/Cash_Profit__c.field-meta.xml
<CustomField>
    <fullName>Cash_Profit__c</fullName>
    <label>Cash Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>