force-app/main/default/objects/Financial_Assessment__c/fields/Cash_Profit_percent__c.field-meta.xml
<CustomField>
    <fullName>Cash_Profit_percent__c</fullName>
    <label>Cash Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>