force-app/main/default/objects/Financial_Assessment__c/fields/Cash_Profits_Depriciation_Net_Profit__c.field-meta.xml
<CustomField>
    <fullName>Cash_Profits_Depriciation_Net_Profit__c</fullName>
    <label>Cash Profits (Depriciation+ Net Profit)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>