force-app/main/default/objects/Financial_Assessment__c/fields/Charge_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Charge_per_hour__c</fullName>
    <label>Charge per hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>