force-app/main/default/objects/Financial_Assessment__c/fields/CleanerOperator_Salary__c.field-meta.xml
<CustomField>
    <fullName>CleanerOperator_Salary__c</fullName>
    <label>Cleaner/Operator Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>