force-app/main/default/objects/Financial_Assessment__c/fields/Consumables_Cost__c.field-meta.xml
<CustomField>
    <fullName>Consumables_Cost__c</fullName>
    <formula>Fuel_Cost_per_month_Viability_CE__c * 0.3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumables Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>