force-app/main/default/objects/Financial_Assessment__c/fields/Cost_of_Fuel_per_litre__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Fuel_per_litre__c</fullName>
    <label>Cost of Fuel per litre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>