force-app/main/default/objects/Financial_Assessment__c/fields/Creditors_Turnover_Days__c.field-meta.xml
<CustomField>
    <fullName>Creditors_Turnover_Days__c</fullName>
    <label>Creditors Turnover Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>