force-app/main/default/objects/Financial_Assessment__c/fields/Current_Assets_Loans_Adv__c.field-meta.xml
<CustomField>
    <fullName>Current_Assets_Loans_Adv__c</fullName>
    <label>Current Assets, Loans &amp; Adv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>