force-app/main/default/objects/Financial_Assessment__c/fields/Current_Liability_Provisions__c.field-meta.xml
<CustomField>
    <fullName>Current_Liability_Provisions__c</fullName>
    <label>Current Liability &amp; Provisions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>