force-app/main/default/objects/Financial_Assessment__c/fields/Current_Ratio_should_be_11__c.field-meta.xml
<CustomField>
    <fullName>Current_Ratio_should_be_11__c</fullName>
    <label>Current Ratio should be &gt; 1.1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>