force-app/main/default/objects/Financial_Assessment__c/fields/Data_type__c.field-meta.xml
<CustomField>
    <fullName>Data_type__c</fullName>
    <label>Data type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>