force-app/main/default/objects/Financial_Assessment__c/fields/Debtors_as_in_Above__c.field-meta.xml
<CustomField>
    <fullName>Debtors_as_in_Above__c</fullName>
    <label>Debtors as in Above</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>