force-app/main/default/objects/Financial_Assessment__c/fields/Debtors_Turnover_Days_should_be_75__c.field-meta.xml
<CustomField>
    <fullName>Debtors_Turnover_Days_should_be_75__c</fullName>
    <label>Debtors Turnover Days should be &lt; 75</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>