force-app/main/default/objects/Financial_Assessment__c/fields/Debtors_Turnover_should_be_90_days__c.field-meta.xml
<CustomField>
    <fullName>Debtors_Turnover_should_be_90_days__c</fullName>
    <label>Debtors Turnover should be &lt;/= 90 days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>