force-app/main/default/objects/Financial_Assessment__c/fields/Deemed_Free_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Deemed_Free_Calculation__c</fullName>
    <formula>Deemed_Free_fleet__c  / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deemed Free Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>