force-app/main/default/objects/Financial_Assessment__c/fields/Deemed_Free_fleet__c.field-meta.xml
<CustomField>
    <fullName>Deemed_Free_fleet__c</fullName>
    <label>Deemed Free fleet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>