force-app/main/default/objects/Financial_Assessment__c/fields/Deferred_tax_balance__c.field-meta.xml
<CustomField>
    <fullName>Deferred_tax_balance__c</fullName>
    <label>Deferred tax balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>