force-app/main/default/objects/Financial_Assessment__c/fields/Deployed_at__c.field-meta.xml
<CustomField>
    <fullName>Deployed_at__c</fullName>
    <label>Deployed at</label>
    <length>255</length>
    <type>Text</type>
</CustomField>