force-app/main/default/objects/Financial_Assessment__c/fields/Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Depreciation__c</fullName>
    <label>Depreciation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>