force-app/main/default/objects/Financial_Assessment__c/fields/DSCR_Debt_Service_Coverage_Ratio__c.field-meta.xml
<CustomField>
    <fullName>DSCR_Debt_Service_Coverage_Ratio__c</fullName>
    <label>DSCR ( Debt Service Coverage Ratio)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>