force-app/main/default/objects/Financial_Assessment__c/fields/DSCR_including_proposed_should_be_1__c.field-meta.xml
<CustomField>
    <fullName>DSCR_including_proposed_should_be_1__c</fullName>
    <label>DSCR {including proposed} should be &gt; 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>