force-app/main/default/objects/Financial_Assessment__c/fields/DSCR_should_be_1__c.field-meta.xml
<CustomField>
    <fullName>DSCR_should_be_1__c</fullName>
    <label>DSCR should be 1%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>