force-app/main/default/objects/Financial_Assessment__c/fields/EMI_Viability_CE__c.field-meta.xml
<CustomField>
    <fullName>EMI_Viability_CE__c</fullName>
    <label>EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>