force-app/main/default/objects/Financial_Assessment__c/fields/Equated_Monthly_Instalments_EMI__c.field-meta.xml
<CustomField>
    <fullName>Equated_Monthly_Instalments_EMI__c</fullName>
    <label>Equated Monthly Instalments (EMI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>