force-app/main/default/objects/Financial_Assessment__c/fields/Equated_MonthlyInstalmentsEMI_Viabil_CE__c.field-meta.xml
<CustomField>
    <fullName>Equated_MonthlyInstalmentsEMI_Viabil_CE__c</fullName>
    <label>Equated Monthly Instalments (EMI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>