force-app/main/default/objects/Financial_Assessment__c/fields/FCF_EMI__c.field-meta.xml
<CustomField>
    <fullName>FCF_EMI__c</fullName>
    <formula>Free_Cash_Flow_FCF__c /  Equated_Monthly_Instalments_EMI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCF / EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>