force-app/main/default/objects/Financial_Assessment__c/fields/FCF_EMI_Viability_CE__c.field-meta.xml
<CustomField>
    <fullName>FCF_EMI_Viability_CE__c</fullName>
    <formula>Free_Cash_Flow_FCF_Viability_CE__c /  Equated_MonthlyInstalmentsEMI_Viabil_CE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCF / EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>