force-app/main/default/objects/Financial_Assessment__c/fields/FCF_EMI_Viability_CV__c.field-meta.xml
<CustomField>
    <fullName>FCF_EMI_Viability_CV__c</fullName>
    <formula>(Free_Cash_Flow_FCF_Viability_CV__c)/
( Equated_Monthly_Instalments_EMI_Via_CV__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCF / EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>