force-app/main/default/objects/Financial_Assessment__c/fields/FFR__c.field-meta.xml
<CustomField>
    <fullName>FFR__c</fullName>
    <formula>Free_Fleet__c  /  Existing_Fleet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FFR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>