force-app/main/default/objects/Financial_Assessment__c/fields/FFR_including_DF__c.field-meta.xml
<CustomField>
    <fullName>FFR_including_DF__c</fullName>
    <formula>(Free_Fleet__c +  Deemed_Free_Calculation__c +  Free_Fleet_Instalment_or_principle_expos__c )/ Existing_Fleet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FFR including DF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>