force-app/main/default/objects/Financial_Assessment__c/fields/Financed_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Financed_Fleet__c</fullName>
    <formula>Existing_Fleet__c  -  Free_Fleet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financed Fleet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>