force-app/main/default/objects/Financial_Assessment__c/fields/Financial_Duplicate_Id__c.field-meta.xml
<CustomField>
    <fullName>Financial_Duplicate_Id__c</fullName>
    <label>Financial Duplicate Id</label>
    <length>34</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>