force-app/main/default/objects/Financial_Assessment__c/fields/Financial_Expenses_Interest_and_chaerges__c.field-meta.xml
<CustomField>
    <fullName>Financial_Expenses_Interest_and_chaerges__c</fullName>
    <label>Financial Expenses Interest and charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>