force-app/main/default/objects/Financial_Assessment__c/fields/Financial_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Type__c</fullName>
    <label>Financial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provisional</fullName>
                <default>true</default>
                <label>Provisional</label>
            </value>
            <value>
                <fullName>Audited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>