force-app/main/default/objects/Financial_Assessment__c/fields/Fixed_Assets__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Assets__c</fullName>
    <label>Fixed Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>