force-app/main/default/objects/Financial_Assessment__c/fields/Fleet_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Expansion__c</fullName>
    <formula>Assets_funded_in_last_12_Months__c / ( Existing_Fleet__c - Assets_funded_in_last_12_Months__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fleet Expansion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>