force-app/main/default/objects/Financial_Assessment__c/fields/Free_Cash_Flow_FCF__c.field-meta.xml
<CustomField>
    <fullName>Free_Cash_Flow_FCF__c</fullName>
    <formula>Monthly_Revenue_in_Rs_Lakh__c -  Total_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free Cash Flow (FCF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>