force-app/main/default/objects/Financial_Assessment__c/fields/Free_Cash_Flow_FCF_Viability_CE__c.field-meta.xml
<CustomField>
    <fullName>Free_Cash_Flow_FCF_Viability_CE__c</fullName>
    <formula>Monthly_revenue_in_Rs_Lacs_Viability_CE__c  -  Total_Expenses_Viability_CE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free Cash Flow (FCF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>