force-app/main/default/objects/Financial_Assessment__c/fields/Free_Cash_Flow_FCF_Viability_CV__c.field-meta.xml
<CustomField>
    <fullName>Free_Cash_Flow_FCF_Viability_CV__c</fullName>
    <formula>Monthly_revenue_in_Rs_Lacs_Viability_CV__c
 -
( Fuel_Cost_c_h_g__c +  Tyre_Cost_I_J_c_k__c  +  Drivers_Salary__c +  Buy_Charge_per_Hour__c + CleanerOperator_Salary__c +  Permit_Cost__c + Tax_Expense__c + Maintenance_Cost__c  +  Misc_Exps__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free Cash Flow (FCF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>