force-app/main/default/objects/Financial_Assessment__c/fields/Free_Fleet_Instalment_or_principle_expos__c.field-meta.xml
<CustomField>
    <fullName>Free_Fleet_Instalment_or_principle_expos__c</fullName>
    <description>Free Fleet (Where 75% of Instalment or &gt; 75% of principle exposure paid)</description>
    <inlineHelpText>Free Fleet (Where 75% of Instalment or &gt; 75% of principle exposure paid)</inlineHelpText>
    <label>free fleet based on Principal Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>