force-app/main/default/objects/Financial_Assessment__c/fields/Freight_Paid__c.field-meta.xml
<CustomField>
    <fullName>Freight_Paid__c</fullName>
    <label>Freight Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>