force-app/main/default/objects/Financial_Assessment__c/fields/Freight_prevelent_in_market__c.field-meta.xml
<CustomField>
    <fullName>Freight_prevelent_in_market__c</fullName>
    <inlineHelpText>Freight prevelent in market as on date on this route per trip</inlineHelpText>
    <label>Freight prevelent in market</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>