force-app/main/default/objects/Financial_Assessment__c/fields/Fuel_Cost_c_h_g__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Cost_c_h_g__c</fullName>
    <formula>(Cost_of_Fuel_per_litre__c *  Monthly_Running_In_KM__c )/ Fuel_Avg_in_LtrHr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fuel Cost (c*h / g)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>