force-app/main/default/objects/Financial_Assessment__c/fields/Fuel_cost_in_a_month_CE__c.field-meta.xml
<CustomField>
    <fullName>Fuel_cost_in_a_month_CE__c</fullName>
    <formula>No_Of_working_Days__c *  Fuel_Avg_in_LtrHr__c * Cost_of_Fuel_per_litre__c * No_of_hr_opearted_in_a_day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fuel cost in a month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>